# zemer-app-dpad

./: .gitignore  .gitmodules  AGENTS.md  AUDIT_QUICK_REFERENCE.md  AUDIT_REPORT.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: debug-build.yml  docs-regenerate.yml  player-monitor.yml  release-build.yml  ui-audit.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  coverart_jni.cpp
docs/: MWEB-INVESTIGATION.md  README.md  build-release.md  generate.py  repository-map.md
docs/app/: README.md  database.md  playback.md  preferences-sync-auth.md  viewmodels.md
docs/fcast/: 01-architecture.md  02-on-demand-native-lib.md  03-discovery-and-connection.md  (+5 more)
gradle/: libs.versions.toml
innertube/: build.gradle.kts
lrclib/: build.gradle.kts
scripts/: check-16kb-alignment.sh  check-dead-resources.sh  check-download-unification.sh  dead-resources-baseline.txt  telegram-chats.sh  ui-audit-baseline.tsv  ui-audit.sh  ui-strings-scan.py
tests/: INVESTIGATION.md  README.md  analyze-player.mjs  broken-clients.mjs  check-live-player.mjs  cipher-check.mjs  cipher.mjs  client-fulldownload.mjs  clients.mjs  config-covers.mjs  cred.mjs  derive-player-config.mjs  discover-clients.mjs  full-stream.mjs  gen-player-dates.mjs  inspect-player.mjs  package-lock.json  package.json  player-configs.mjs  player-configs.test.mjs  pot-probe.mjs  potoken.mjs  probe-all-ids.mjs  probe-client-auth.mjs  probe-client-detail.mjs  probe-client-v2.mjs  probe-client-v3.mjs  probe-clients.mjs  probe-extended.mjs  probe-mweb-app-exact.mjs  probe-mweb-deobfuscate.mjs  probe-mweb-drain.mjs  probe-mweb-full.mjs  probe-mweb-itag140.mjs  probe-mweb-nopot.mjs  probe-mweb-pervideo.mjs  probe-mweb-playerjs.mjs  probe-mweb-reqpot.mjs  probe-mweb-stream.mjs  probe-mweb-verdict.mjs  (+19 more)
(+661 files in other folders)
